Implement CRUD playlist and music track
